// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/StandardTextField test StandardTextField component 1`] = `
<View>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Test"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`components/StandardTextField test StandardTextField component with helper text 1`] = `
<View>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Test"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <Text
    style={
      [
        {
          "color": "#818181",
        },
        undefined,
        [
          {
            "fontSize": 12,
          },
          undefined,
        ],
      ]
    }
  >
    Error
  </Text>
</View>
`;

exports[`components/StandardTextField test StandardTextField component with icon 1`] = `
<View>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "paddingVertical": 8,
          },
          undefined,
        ]
      }
    >
      <TextInput
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Test"
        style={
          [
            {
              "flex": 1,
              "fontSize": 16,
              "paddingHorizontal": 12,
              "paddingVertical": 8,
            },
            {
              "paddingLeft": 32,
            },
          ]
        }
      />
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": undefined,
              "fontSize": 12,
            },
            {
              "color": "#818181",
              "fontSize": 20,
            },
            {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        󰐕
      </Text>
    </View>
  </View>
</View>
`;
